# FileSpeedComparison

./: .gitignore
engine_speed/: benchmark.py  csv_parquet_read_write.py  duckdb_experimenting.py  duckdb_test.py  example.py  polars_experimenting.py  polars_sink_write_comparisons.py  polars_test.py  practice.py  pushdown_comparisons.py  pyproject.toml  query_visualisation.ipynb  read_write_comparisons.ipynb  time_comp_filter.py  time_comparisons.py
engine_speed/.ipynb_checkpoints/: nb-checkpoint.ipynb
hello/: data.parquet  file_comparison.py  nb.ipynb  practice.py  pyproject.toml  time_comp_read_write.py
tf_test/: pyproject.toml  tf_gpu_check.ipynb
tf_test/.ipynb_checkpoints/: nb-checkpoint.ipynb
