[project]
name = "engine_speed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.3.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
